--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
   "description": "使用 TypeScript，包含大量 UI 区块，比如图表、表单等。",
   "dependencies": {
     "@alifd/next": "^1.21.0-beta.4",
+    "@alifd/theme-design-pro": "^0.6.2",
+    "@antv/data-set": "^0.10.2",
+    "@types/react": "^16.9.13",
+    "@types/react-dom": "^16.9.4",
+    "ahooks": "^2.0.0",
+    "bizcharts": "^3.5.6",
+    "lodash.debounce": "^4.0.8",
     "moment": "^2.24.0",
+    "node-sass": "^7.0.1",
+    "prop-types": "^15.5.8",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-intl": "^2.8.0",
-    "ahooks": "^2.0.0",
-    "@antv/data-set": "^0.10.2",
-    "bizcharts": "^3.5.6",
-    "@alifd/theme-design-pro": "^0.6.2",
-    "prop-types": "^15.5.8",
-    "@types/react": "^16.9.13",
-    "@types/react-dom": "^16.9.4",
-    "lodash.debounce": "^4.0.8",
     "react-sortablejs": "^5.0.0",
-    "sortablejs": "^1.12.0"
+    "sortablejs": "^1.12.0",
+    "tar": "^2.2.2"
   },
   "devDependencies": {
     "@iceworks/spec": "^1.0.0",
@@ -25,6 +27,7 @@
     "build-plugin-moment-locales": "^0.1.0",
     "eslint": "^6.8.0",
     "ice.js": "^1.0.0",
+    "sass": "^1.54.0",
     "stylelint": "^13.2.0"
   },
   "scripts": {
